<resources>
    <string name="app_name">Hobbido_and</string>
    <string name="terms_and_policy">By clicking on "Register" you agree to our \n <font color='#ff8400'>terms of use</font>  &amp; <font color='#0042B9'>privacy policy</font></string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="country_of_residence">Country of Residence</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="select_a_minimum_of_3_categories_to_get_you_started">Select a minimum of 3 categories \n to get you started.</string>
    <string name="search_category">Search category</string>
    <string name="search_location">Search loaction</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account">Don\'t have an account? <b><font color='#672a7a'>Sign Up</font></b></string>
    <string name="you_need_to_provide_this_information_later_to_process_your_payout">You need to provide this \n information later to process \n your payout.</string>
    <string name="session_successfully_add">Session successfully add \n to cart\n.</string>
    <string name="your_application_to_become_a_host_has_been_successfully_submitted_and_it_is_under_review">your application to become a host has \n been successfully submitted and it is \n under review.</string>
    <string name="you_will_receive_a_notification_when_it_is_approved">You will receive a notification when it is approved.</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra, odio nec volutpat tincidunt, tortor erat imperdiet eros, id gravida nibh mauris eu leo. Curabitur at lacus rutrum, dignissim enim ac, fermentum nunc. Nullam urna ligula, vulputate posuere est eu, luctus tincidunt orci. Nulla posuere lorem non velit pretium accumsan. Praesent ut orci ullamcorper, porta diam tempus, suscipit justo. Etiam aliquet leo eu sapien maximus gravida. Donec faucibus sapien sit amet tellus efficitur, eget finibus mauris tincidunt. Proin at pellentesque erat. Nulla facilisi. Donec sed velit eros. Ut iaculis orci ut urna suscipit, sed dapibus ipsum tempus. Vestibulum sem turpis, luctus eu dignissim nec, aliquam quis augue. Cras venenatis lectus sed lacus ultrices ultricies. Nunc velit odio, egestas vitae tellus et, placerat mattis mauris. Duis ante leo.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_location">Map</string>
    <string name="contact"><u>Contact Us</u></string>
    <string name="rafting_sub_titlte_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer venenatis orci massa. Du is pulvinar ante.</string>
    <string name="text_header_min">we will be sad to see you go, if we can do anything to change your mind please</string>
    <string name="content">This will delete your account from our platform and all of your data will be permanently erased. If you still have funds in your walled or unattended sessions please ensure to  use them before proceeding. We will not be able to provide any refunds for unused funds or unattended sessions</string>
    <string name="session_successfully_added_to_cart">Session successfully added \n to cart.</string>
    <string name="are_you_sure_you_want_to_quit"><font color='#26374b'>Are you sure you want to quit?</font> \n All progress will be lost.</string>
    <string name="added_waiting">Added to waiting list</string>

    <string name="you_cannot_delete_your_account">You cannot delete your account as you have an active host profile.</string>
    <string name="you_still_have_hunderd">You still have <font color='#ff8400'>$10.00</font> in your wallet and unattended sessions
        \n Are you sure you want to continue? </string>
    <string name="loreum_ipsum_Loreum">Loreum ipsum Loreum ipsumLoreum ipsu Loreum ipsum Loreum ipsum</string>
    <string name="please_contact_support"><u>Please contact support for more information.</u></string>
    <string name="list_content_loreum">Loreum ipsum Loreum ipsum Loreum ipsum Loreu ipsum Loreum ipsum. Loreum ipsum Loreum ipsu Loreum ipsum Loreum ipsum Loreum ipsu Loreum ipsum Loreum ipsum Loreum ipsu Loreum ipsum Loreum ipsum Loreum ipsum Loreum ipsumLoreum ipsum Loreum ipsum Loreu ipsumLoreum ipsum Loreum ipsumLoreum ipsu Loreum ipsum Loreum ipsum Loreum ipsum.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry</string>
    <string name="price_with_rupees">Price: <font color='#26374b'>$10.00</font></string>
    <string name="duration_with_hours">Duration: <font color='#26374b'>1 Hour</font></string>
    <string name="capacity">Capacity: <font color='#26374b'>10</font></string>
    <string name="date_friday"><font color='#26374b'>Date: </font>Friday, 5th 2021, 05:00 PM to 10:00 PM</string>
    <string name="total_slot"><font color='#26374b'>Total slots: </font>20</string>
    <string name="available_slot"><font color='#26374b'>Available Slots: </font>18</string>
    <string name="username"><font color='#26374b'>User Name:  </font>sharadgarg21</string>
    <string name="numberslots"><font color='#26374b'>Number of Slots:   </font>2</string>
    <string name="location"><font color='#26374b'>Loaction:   </font>Noida 63, India</string>

    <string name="username_scanbarcode"><font color='#26374b'>Username: </font>sharadgarg21</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_integer_venenatis_orci_massa_duis_pulvinar_ante_quis_mi_volutpat_non_con_val_lis_turpis_semper_more">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer venenatis orci massa. Du is pulvinar ante quis mi volutpat, non con val lis turpis semper more...</string>
    <string name="redeem"><u>Redeem</u></string>
    <string name="price"><b>Price : </b>$20.00 per slot</string>
    <string name="reminder_session">Reminder Session :<font color='#959ba4'>30</font></string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</string>
    <string name="are_you_sure_you_want_to_leave_the_waiting_list">Are you sure you want to leave \n the waiting list?</string>
    <string name="activity_name_activity_name_activity_name">Activity Name Activity Name Activity \n Name</string>
    <string name="discount">Discount  <font color='#ff8400'>  (Promocode: ABCVXK123)</font></string>
    <string name="wallet_txn_id_123454876465">Wallet Txn ID: <font color='#7f838c'>123454876465</font></string>
    <string name="are_you_sure_to_want_to_cancel"> Are you sure you want to cancel \n this booking? the amount of 10$ \n  will be credited to your wallet</string>
    <string name="lorem_ipsum_is_simply_dummy">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the\n industry</string>
    <string name="re_submit_documents"><u>Re-Submit Documents</u></string>

</resources>