<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceList2Activity">
    <include
        android:id="@+id/include1"
        layout="@layout/custom_tool_bar_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optionTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:lineSpacingExtra="9sp"
        android:text="Option A"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include1" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:lineSpacingExtra="9sp"
        android:text="@string/date_friday"
        android:textColor="@color/edit_text_hint_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/optionTv"
        app:layout_constraintTop_toBottomOf="@id/optionTv" />

    <TextView
        android:id="@+id/totalSlotsTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:lineSpacingExtra="6sp"
        android:text="@string/total_slot"
        android:textColor="@color/edit_text_hint_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/dateTv"
        app:layout_constraintTop_toBottomOf="@id/dateTv" />
    <TextView
        android:id="@+id/availableSlotsTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:lineSpacingExtra="6sp"
        android:text="@string/available_slot"
        android:textColor="@color/edit_text_hint_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/totalSlotsTv"
        app:layout_constraintTop_toBottomOf="@id/totalSlotsTv" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/availableSlotsTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/usernameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="8sp"
                android:text="@string/username"
                android:textSize="13sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/numberSlotsTv"
                android:layout_width="0dp"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="8sp"
                android:text="@string/numberslots"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/usernameTv"
                app:layout_constraintTop_toBottomOf="@id/usernameTv"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/username1Tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="8sp"
                android:text="@string/username"
                android:textSize="13sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/numberSlots1Tv"
                android:layout_width="0dp"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="8sp"
                android:text="@string/numberslots"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/username1Tv"
                app:layout_constraintTop_toBottomOf="@id/username1Tv"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>